src/patterns/01-molecules/flyout/_flyout.scss
/*  =========================================================================
    Components.Flyout
    ========================================================================= */

@use 'sass/vars';
@use '@supple-kit/supple-css/tools/mixins';
@use 'sass/functions';

/*  Module
    ========================================================================= */

.c-flyout {
  display: inline-block;
}



/*  Elements
    ========================================================================= */

.c-flyout__wrap-button {
  position: relative;
}

.c-flyout__panel {
  position: absolute;
  z-index: functions.get-z-index(flyout-panel);
  inset-inline: vars.$space-tiny;
  margin-block-start: vars.$space-small;
  border: 1px solid vars.$color-gray;
  padding: vars.$space-small;
}

.c-flyout__arrow {
  position: absolute;
  top: calc(100% + #{vars.$space-small - 8px + 1px});
  z-index: functions.get-z-index(flyout-panel) + 1;
  inset-inline-start: 50%;
  transform: translateX(-50%);
  color: vars.$color-white;
  filter: drop-shadow(0 -1px 0 vars.$color-gray);
  display: none;

  .c-icon {
    inline-size: 16px;
    block-size: 8px;
  }
}

.c-flyout__button[aria-expanded='true'] + .c-flyout__arrow {
  display: block;
}

.c-flyout__close-icon {
  position: relative;
  z-index: 3;
  display: block;
}



/*  Responsive
    ========================================================================= */

@include mixins.mq(lap) {
  .c-flyout {
    position: relative;
  }

  .c-flyout__panel {
    --offset: 0;
    left: 50%;
    transform: translateX(-50%);
    min-inline-size: 360px;

    //&.is-offset-left {
    //  left: 0;
    //  transform: translateX(0);
    //}

    &.is-offset-right {
      transform: translateX(calc(-50% - var(--offset) * 1px - #{vars.$space-base}));
    }
  }
}

